--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
-fastapi>=0.115.0
-uvicorn[standard]>=0.34.0
+modal>=0.67.0
+openai>=1.14.0
+Pillow>=10.0.0
+fastapi[standard]>=0.115.0
 pydantic>=2.10.0
 pydantic-settings>=2.7.0
 python-dotenv>=1.0.0
-httpx>=0.28.0
