--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,6 @@ pydantic>=2.10.0
 pydantic-settings>=2.7.0
 python-dotenv>=1.0.0
 httpx>=0.28.0
+openai>=1.0.0
+anthropic>=0.39.0
+google-generativeai>=0.8.0
