--- a/boardify/package.json
+++ b/boardify/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"lucide-react": "^0.564.0",
+		"motion": "^12.34.0",
 		"next": "^15.2.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
