--- a/boardify/package.json
+++ b/boardify/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@t3-oss/env-nextjs": "^0.12.0",
+		"lightningcss": "^1.31.1",
 		"next": "^15.2.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -27,7 +28,7 @@
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
 		"postcss": "^8.5.3",
-		"tailwindcss": "^4.0.15",
+		"tailwindcss": "^4.1.18",
 		"typescript": "^5.8.2"
 	},
 	"ct3aMetadata": {
