--- a/game-engine/backend/requirements.txt
+++ b/game-engine/backend/requirements.txt
@@ -3,3 +3,6 @@ uvicorn[standard]>=0.29.0
 pydantic>=2.0.0
 websockets>=12.0
 python-multipart>=0.0.9
+modal>=0.66.0
+anthropic>=0.39.0
+httpx>=0.27.0
