setup for vercel deployment

--- a/game-engine/frontend/.env.production
+++ b/game-engine/frontend/.env.production
@@ -14,5 +14,5 @@
 # NEXT_PUBLIC_WS_URL=wss://boardify-backend.onrender.com
 
 # Replace with your actual backend URL:
-NEXT_PUBLIC_API_URL=https://YOUR_BACKEND_URL_HERE
-NEXT_PUBLIC_WS_URL=wss://YOUR_BACKEND_URL_HERE
+NEXT_PUBLIC_API_URL=https://game.darentan.dev/
+NEXT_PUBLIC_WS_URL=wss://game.darentan.dev/
